Create classic email template
Create classic email template

--- a/Artywiz/classic.html
+++ b/Artywiz/classic.html
@@ -1,4 +1,4 @@
-<!-- Email object : COMMUNIQUEZ LES MATCHS DE VOS ÉQUIPES -->
+<!-- Email object : Créez les calendriers 2022 de votre club, avec Artywiz football et la LGEF! -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="light">
   <meta name="supported-color-schemes" content="light">
-  <title>COMMUNIQUEZ LES MATCHS DE VOS ÉQUIPES</title>
+  <title>Créez vos calendriers 2022!</title>
   <style type="text/css">rb
 .ReadMsgBody { width: 100%; background-color: #ffffff; }
 .ExternalClass { width: 100%; background-color: #ffffff; }
@@ -56,7 +56,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1627268659/communication/header-communication-high-res-lgef.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1636341968/Classic/bg-creer-vos-calendriers.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -123,22 +123,22 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--headline-->
                                     <tr>
                                         <td
-                                            style="font-family: Ubuntu; font-size:26px; color:#FFFFFF;font-weight: bold; text-transform: uppercase;">
+                                            style="font-family: Ubuntu; font-size: 32px; color:#FFFFFF;font-weight: bold; text-transform: uppercase;">
                                             <multi label="headline">
-                                                <p align="center" style="line-height: 30px; margin-top: 26px;">COMMUNIQUEZ LES MATCHS <br> DE VOS ÉQUIPES</p>
+                                                <p align="center" style="line-height: 37px; margin-top: 26px; margin-bottom: 0;">Créez vos <br>calendriers 2022!</p>
                                             </multi>
                                         </td>
                                     </tr>
                                     <!--end headline-->
                                     <tr>
-                                        <td height="10"></td>
+                                        <td height="20"></td>
                                     </tr>
                                     <tr>
                                         <td
                                             align="center"
                                             style="font-family:Century gothic, Arial, Sans-serif; font-size: 18px; color:#FFFFFF;font-weight: bold;">
                                             <multi label="headline">
-                                                <hr style="width: 43px; border-color: #fff; border-radius: 100px;">
+                                                <hr style="width: 43px; height: 5px; border-radius: 100px; background-color: #fff; border: none;">
                                             </multi>
                                         </td>
                                     </tr>
@@ -160,7 +160,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Ubuntu; font-size: 14px; color:#FFFFFF;font-weight: bold; text-transform: uppercase;">
                                             <multi label="headline">
-                                                <p align="center" style="line-height: 16px; margin: 0;">AFFICHES • PUBLICATION réSEAUX SOCIAUX • EMAILINGS • BANNIèRES WEB </p>
+                                                <p align="center" style="line-height: 16px; margin: 0;">INTERNET - RÉSEAUX SOCIAUX - EMAILINGS - AFFICHAGE</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -216,8 +216,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Roboto; font-size: 28px; color:#4A4A4A; text-transform: uppercase; font-weight: bold;">
                                             <multi label="content">
-                                                <p align="left" style="line-height: 33px; margin: 0;">
-                                                    Développez <br>la communication <br>de votre club!
+                                                <p align="left" style="line-height: 32px; margin: 0; font-size: 27px;">
+                                                    Développez l’image <br>et les revenus de <br>votre club.
                                                 </p>
                                             </multi>
                                         </td>
@@ -232,12 +232,12 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family: Roboto; font-size: 13px; color:#979797; line-height:20px;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 20px; margin: 0;">
-                                                    Avec ARTYWIZ football, communiquer n’a jamais été aussi simple: <br>
-                                                    Choisissez une action de communication parmi
-                                                    plus de 60 modèles prêts à l’emploi, personnalisez
-                                                    vos documents, intégrez vos sponsors... <br>
-                                                    ARTYWIZ se charge du reste! <br>
-                                                    Pour les dirigeants, community managers, éducateurs et entraineurs.
+                                                    «C’est le moment de penser à créer un support de communication idéal pour véhiculer l’image de votre club et développer de nouvelles sources de revenus: les calendriers 2022. <br><br>
+
+                                                    A l’image de votre club ou de votre équipe, les calendriers 2022 proposés sur Artywiz.io sont personnalisables. <br>
+                                                    Vous choisissez un modèle de calendrier, une palette de couleur, vous saisissez votre texte d’accroche, et le tour est joué, Artywiz se charge du reste. <br><br>
+
+                                                    Vous pouvez télécharger votre calendrier en PDF ou le commander directement sur notre site et vous faire livrer dans la semaine de votre commande."
                                                 </p>
                                             </multi>
                                         </td>
@@ -248,7 +248,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                             </td>
                         </tr>
                         <tr>
-                            <td height="118"></td>
+                            <td height="64"></td>
                         </tr>
                     </table>
                 </td>
@@ -272,7 +272,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632465422/communication/annonces-de-matchs.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1636341971/Classic/calendriers-2022.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -287,7 +287,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td align="center"
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
                                             <single label="title">
-                                                Annonces de matchs
+                                                calendriers 2022
                                             </single>
                                         </td>
                                     </tr>
@@ -321,7 +321,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632464223/communication/communiquer-un-r%C3%A9sultat.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1636341976/Classic/calendriers-mod%C3%A8le-propre.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -333,9 +333,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
-                                            <single label="title">
-                                                Communication de résultats
-                                            </single>
+                                            <single label="title"></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -354,7 +352,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632464357/communication/matchs-du-week-end.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1636341980/Classic/calendriers-mod%C3%A8le-sombre.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -366,9 +364,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
-                                            <single label="title">
-                                                Matchs du week-end
-                                            </single>
+                                            <single label="title"></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -401,7 +397,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626333286/communication/liste-de-r%C3%A9sultats.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1636341984/Classic/calendriers-mod%C3%A8le-moderne.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -413,9 +409,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
-                                            <single label="title">
-                                                Liste de résultats
-                                            </single>
+                                            <single label="title"></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -434,7 +428,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632464550/communication/photos-de-matchs.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1636341989/Classic/calendriers-mod%C3%A8le-minimaliste.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -446,9 +440,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
-                                            <single label="title">
-                                                Photos de matchs
-                                            </single>
+                                            <single label="title"></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
