--- a/Artywiz/communication-les-matchs-district.html
+++ b/Artywiz/communication-les-matchs-district.html
@@ -272,7 +272,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626943117/communication/1-mockup-district-Annonces-de-matchs.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632465670/communication/annonces-de-matchs-district.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -321,7 +321,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626943120/communication/2-mockup-district-Communication-de-r%C3%A9sultats-2.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632465767/communication/communication-de-resultats-district.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -354,7 +354,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626943124/communication/3-mockup-district-Matchs-du-week-end-3.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632465824/communication/matchs-du-week-end-district.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -401,7 +401,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626943128/communication/4-mockup-district-Liste-de-r%C3%A9sultats.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632465912/communication/liste-de-r%C3%A9sultats-district.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -434,7 +434,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626943131/communication/5-mockup-district-Photos-de-matchs.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632465979/communication/photos-de-matchs-district.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
