Create email classic district
Create email classic district

--- a/Artywiz/classic-district.html
+++ b/Artywiz/classic-district.html
@@ -104,7 +104,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                     <td align="center" style="line-height:0px;">
                                                         <a href="https://lgef.fff.fr" target="_blank">
                                                             <img
-                                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735976/developez/lgef-logo.png" alt="" width="160"
+                                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735977/developez/lgef-district.png" alt="" width="160"
                                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width: 52px;"
                                                                 editable label="image" />
                                                         </a>
@@ -1160,10 +1160,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.adetem.org/" target="_blank">
+                                            <a href="https://www.creditmutuel.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596610566/covid/adetem-sponsor.png" alt="" width="160"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735813/developez/credit-mutuel-large.png" alt="" width="160"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:120px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
@@ -1184,10 +1184,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.groupama.fr/" target="_blank">
+                                            <a href="https://www.colruyt.fr" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596609866/covid/sponsor-groupama.png" alt="" width="160"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735813/developez/colruyt-large.png" alt="" width="160"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:120px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
