- Replace mockup on commmunication les match - Create christmas new year template email
- Replace mockup on commmunication les match
- Create christmas new year template email

--- a/Artywiz/christmas-new-year.html
+++ b/Artywiz/christmas-new-year.html
@@ -1,4 +1,4 @@
-<!-- Email object : COMMUNIQUEZ LES MATCHS DE VOS ÉQUIPES -->
+<!-- Email object : Créez vos carte de voeux 2022! -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="light">
   <meta name="supported-color-schemes" content="light">
-  <title>COMMUNIQUEZ LES MATCHS DE VOS ÉQUIPES</title>
+  <title>Créez vos carte de voeux 2022!</title>
   <style type="text/css">rb
 .ReadMsgBody { width: 100%; background-color: #ffffff; }
 .ExternalClass { width: 100%; background-color: #ffffff; }
@@ -56,7 +56,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1627268659/communication/header-communication-high-res-lgef.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1639368801/email/christmas-new-year/bg-header.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -125,7 +125,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Ubuntu; font-size:26px; color:#FFFFFF;font-weight: bold; text-transform: uppercase;">
                                             <multi label="headline">
-                                                <p align="center" style="line-height: 30px; margin-top: 26px;">COMMUNIQUEZ LES MATCHS <br> DE VOS ÉQUIPES</p>
+                                                <p align="center" style="line-height: 30px; margin-top: 26px;">Créez <br>vos carte de voeux 2022!</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -160,7 +160,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Ubuntu; font-size: 14px; color:#FFFFFF;font-weight: bold; text-transform: uppercase;">
                                             <multi label="headline">
-                                                <p align="center" style="line-height: 16px; margin: 0;">AFFICHES • PUBLICATION réSEAUX SOCIAUX • EMAILINGS • BANNIèRES WEB </p>
+                                                <p align="center" style="line-height: 16px; margin: 0;">INTERNET - RÉSEAUX SOCIAUX - EMAILINGS - AFFICHAGE</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -214,10 +214,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--title-->
                                     <tr>
                                         <td
-                                            style="font-family: Roboto; font-size: 28px; color:#4A4A4A; text-transform: uppercase; font-weight: bold;">
+                                            style="font-family: Roboto; font-size: 21px; color:#4A4A4A; text-transform: uppercase; font-weight: bold;">
                                             <multi label="content">
-                                                <p align="left" style="line-height: 33px; margin: 0;">
-                                                    Développez <br>la communication <br>de votre club!
+                                                <p align="left" style="line-height: 26px; margin: 0;">
+                                                    Pour un joyeux Noël <br>et une belle année 2022!
                                                 </p>
                                             </multi>
                                         </td>
@@ -232,12 +232,11 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family: Roboto; font-size: 13px; color:#979797; line-height:20px;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 20px; margin: 0;">
-                                                    Avec ARTYWIZ football, communiquer n’a jamais été aussi simple: <br>
-                                                    Choisissez une action de communication parmi
-                                                    plus de 60 modèles prêts à l’emploi, personnalisez
-                                                    vos documents, intégrez vos sponsors... <br>
-                                                    ARTYWIZ se charge du reste! <br>
-                                                    Pour les dirigeants, community managers, éducateurs et entraineurs.
+                                                    Profitez de cette fin d’année pour souhaiter un joyeux Noël et une belle année 2022 à votre communauté! <br><br>
+
+                                                    Artywiz vous propose toute une série de modèles de documents prêts à l’emploi et personnalisables, que vous pourrez transmettre via les réseaux sociaux ou par mail à tous les membres de votre communauté; licenciés, bénévoles, sponsors et partenaires! <br><br>
+                                                    
+                                                    N’hésitez plus, et connectez-vous à votre compte Artywiz en cette fin d’année 2021…
                                                 </p>
                                             </multi>
                                         </td>
@@ -272,7 +271,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1638512828/communication/annonces-de-matchs.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1639368805/email/christmas-new-year/joyeux-noel-cartes.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -287,7 +286,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td align="center"
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
                                             <single label="title">
-                                                Annonces de matchs
+                                                JOYEUX NOEL CARTES
                                             </single>
                                         </td>
                                     </tr>
@@ -321,7 +320,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1638512886/communication/communication-de-resultats.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1639368808/email/christmas-new-year/publication-instagram.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -334,7 +333,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
                                             <single label="title">
-                                                Communication de résultats
+                                                PUBLICATION INSTAGRAM
                                             </single>
                                         </td>
                                     </tr>
@@ -354,7 +353,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632464357/communication/matchs-du-week-end.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1639368813/email/christmas-new-year/newsletter.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -367,7 +366,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
                                             <single label="title">
-                                                Matchs du week-end
+                                                NEWSLETTER
                                             </single>
                                         </td>
                                     </tr>
@@ -401,7 +400,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626333286/communication/liste-de-r%C3%A9sultats.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1639369383/email/christmas-new-year/banniere-web.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -414,7 +413,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
                                             <single label="title">
-                                                Liste de résultats
+                                                BANNIERE WEB
                                             </single>
                                         </td>
                                     </tr>
@@ -434,7 +433,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1632464550/communication/photos-de-matchs.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1639369389/email/christmas-new-year/publication-facebook.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -447,7 +446,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
                                             <single label="title">
-                                                Photos de matchs
+                                                PUBLICATION FACEBOOK 
                                             </single>
                                         </td>
                                     </tr>
